dev/logs/erro.log
/home/nuno/Projecto_WebApp/webApp/dev/servidor/node_arranque.js:8
<<<<<<< HEAD
^^
SyntaxError: Unexpected token <<
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:511:25)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:456:32)
    at tryModuleLoad (module.js:415:12)
    at Function.Module._load (module.js:407:3)
    at Function.Module.runMain (module.js:575:10)
    at startup (node.js:160:18)
    at node.js:445:3
